A bit more organizing. (issue in descrip)
The sidebar covers the buttons a bit so that left buttons become very difficult to click. A solution to put the sidebar back one plane fixes this but then makes so that sidebar links are unclickable.  So, I reverted it back to left buttons being difficult to click.

--- a/client/src/css/Estimator.css
+++ b/client/src/css/Estimator.css
@@ -1,7 +1,7 @@
 .estimatorButton {
 	background-color: #2B2B2B;
 	color: white;
-	font-size: 20pt;
+	font-size: 15pt;
 	font: helvetica;
   flex-direction: column;
   justify-content: center;
@@ -12,13 +12,12 @@
   width: 150px;
   height: 150px;
   display: inline-flex;
-	pointer-events: fill;
 }
 
 .selectedButton {
   background-color: #2B2B2B;
   color: white;
-  font-size: 20pt;
+  font-size: 15pt;
   font: helvetica;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +29,6 @@
   width: 150px;
   height: 150px;
   display: inline-flex;
-	pointer-events: fill;
 }
 
 .estimatorFooter {
@@ -43,5 +41,5 @@
 
 .mountainsImage {
 	width: 100%;
-	z-index: -2;
+	z-index: -1;
 }
